# ast-comparison

./: .gitignore  README.md  compare.sh  input.js
go-fAST/: go.mod  go.sum  main.go
js-babel/: index.js  package-lock.json  package.json
output/: js-babel.js
rust-swc/: Cargo.toml
rust-swc/src/: main.rs
